# lagransala-beta

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  flake.nix  overlay.nix  pyproject.toml  result
seeders/: specs.yaml  venues.yaml
src/lagransala/: __init__.py  __main__.py  deps.py  models.py
src/lagransala/core/: models.py
src/lagransala/extraction/: app.py  extractors.py  models.py
src/lagransala/extraction/models/: v1.py  v2.py
src/lagransala/scraping/: app.py  extractors.py  models.py  scrapers.py
src/lagransala/utils/: build_sqlmodel_type.py  coroutine_with_data.py  http_url_key.py
src/lagransala/web/: app.py  models.py
static/: main.css
templates/: base.html  event.html  event_component.html  event_trace.html  index.html
